[package]
name = "digital-garden"
version = "0.1.0"
edition = "2021"
authors = ["Roy Bachar <roybcx@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.1"
directories = "4.0.1"
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.4"
